# TrueID-BE

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  rxconfig.py
TrueID_BE/: TrueID_BE.py  __init__.py  api.py  config.py  migrations.py  repository.py  schemas.py  seeds.py
TrueID_BE/pages/: admin.py
TrueID_BE/services/: __init__.py  identity.py  location.py  normalization.py  telecom_registry.py
scripts/: import_caller_profiles.py  seed_supabase.py
supabase/: seed.sql
supabase/migrations/: 0002_caller_profile_enrichment.sql
supabase_db/: schema.sql
supabase_db/migrations/: 0003_call_logs.sql
tests/: test_identity_service.py
