[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trueid-be"
version = "0.1.0"
description = "TrueID caller identification backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pydantic-settings>=2.6.1,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "reflex>=0.8.18,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
supabase = [
    "supabase>=2.15.3,<3.0.0",
]
dev = [
    "httpx>=0.28.1,<1.0.0",
    "pytest>=8.3.3,<9.0.0",
]

[tool.setuptools]
packages = ["TrueID_BE", "TrueID_BE.services"]
